# hubster

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  docker-compose.override.yml  docker-compose.yml  main.py  pyproject.toml  streamlit_app.py
.cursor/rules/: branch-naming.mdc  git-pr-workflow.mdc  pre-push-ci-checks.mdc
.github/workflows/: ci.yml  deploy.yml  ingest.yml  markdown-links.yml  test.yml
api/: auth.py  main.py  schemas.py
db/: __init__.py  backfill.py  database.py  db_utils.py  query_filters.py  settings.py
docs/: ARCHITECTURE.md  PRODUCT_VISION.md
docs/adr/: 0001-llm-provider-strategy.md  0002-retrieval-filtering-strategy.md  0003-structured-job-title-company-metadata.md  0004-frontend-architecture-for-chat-interface.md  0005-visual-design-tokens-for-the-chat-ui.md  0006-chat-endpoint-hardening.md  0007-local-generation-fallback-ollama-qwen3.md  0009-grounded-inline-job-hyperlinks.md  0010-sparse-bm25-hybrid-search.md  0011-api-key-authentication.md  0012-prompt-injection-guardrails.md  0013-deployment-strategy.md  0014-embedding-model-migration.md
docs/findings/: 0001-keyword-tech-stack-retrieval-gap-findings.md  0002-role-confusion-frontend-copenhagen-findings.md  0003-e5-truncation-retrieval-correlation-findings.md
evals/: __init__.py  collections.py  embeddings.py  fixtures.py  generation.py  hyperparameters.py  types.py
evals_system/: GUIDE.md  README.md  app.py  generation_tab.py  review.py
evals_system/assets/: _capture_screenshots.py
frontend/: .env.example  .env.production  Dockerfile  README.md  index.html  nginx.conf  nginx.dev.conf  package-lock.json  package.json  vite.config.ts  vitest.config.ts
frontend/src/: App.module.css  App.test.tsx  App.tsx  main.tsx  vite-env.d.ts
llm_client/: __init__.py  base.py  context.py  exceptions.py  gemini.py  ollama.py  settings.py  stub.py
scripts/: README.md  analyze_e5_truncation_signal_positions.py  check_e5_document_token_lengths.py  check_fastembed_prefix_support.py  compare_embedding_models.py  compare_generators.py  evaluate_e5_against_production.py  sweep_chat_source_min_score.py  verify_inference_dedupe.py
streamlit_app/: README.md  app.py  collections.py  embeddings_tab.py  judgments.py  review.py  review_collections.py  sweep_tab.py
tests/: README.md  api_auth.py  conftest.py  mock_settings.py  test_main_cli.py
tests/api/: conftest.py  test_auth.py  test_chat.py  test_main.py  test_schemas.py
tests/db/: conftest.py  test_backfill.py  test_database.py  test_generation.py  test_query_filters.py  test_retrieval.py  test_seed_dev.py  test_settings.py  test_sync.py
tests/evals/: test_comparison_helpers.py
tests/evals_system/: test_judgments.py  test_review_collections.py
tests/fixtures/: golden_generation.json  golden_jobs.json  golden_queries.json  jobs_listing_page_1.json  jobs_listing_page_2.json  jobs_listing_summary.json  single_job_competitive.json  single_job_missing_fields.json  single_job_range.json
tests/llm_client/: test_base.py  test_gemini.py  test_ollama.py  test_stub.py
tests/streamlit_app/: test_judgments.py  test_review_collections.py
the_hub_client/: __init__.py  http.py  models.py  utils.py
(+31 files in other folders)
