[project]
name = "hubster"
version = "0.1.0"
description = "Scrape The Hub job portal via API and store embeddings in Qdrant for semantic search"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "markdownify>=1.2.2",
    "pydantic>=2.12.5",
    "pydantic-settings>=2.12.0",
    "python-dotenv>=1.2.1",
    "qdrant-client[fastembed]>=1.16.2",
    "requests>=2.32.5",
    "streamlit>=1.53.1",
    "watchdog>=6.0.0",
]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "responses>=0.25.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "retrieval: semantic search golden-set tests (require local Qdrant)",
]
