[project]
name = "hubster"
version = "0.1.0"
description = "Scrape The Hub job portal via API and store embeddings in Qdrant for semantic search"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.0",
    "google-genai>=2.10.0",
    "markdownify>=1.2.2",
    "pydantic>=2.12.5",
    "pydantic-settings>=2.12.0",
    "python-dotenv>=1.2.1",
    "qdrant-client[fastembed]>=1.18.0",
    "requests>=2.32.5",
    "slowapi>=0.1.10",
    "uvicorn[standard]>=0.34.0",
]

[dependency-groups]
dev = [
    "mypy>=2.2.0",
    "pre-commit>=4.6.0",
    "pytest>=8.0",
    "responses>=0.25.0",
    "ruff>=0.15.20",  # keep in sync with rev in .pre-commit-config.yaml
    "types-requests>=2.33.0.20260518",
]
eval-ui = [
    "streamlit>=1.59.2",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "retrieval: semantic search golden-set tests (require local Qdrant)",
    "generation: generation-quality eval tests (require local Qdrant)",
]

[tool.ruff]
target-version = "py312"
line-length = 88

[tool.ruff.lint]
# Starting set: correctness + import order + modernization; expand deliberately.
select = ["E", "F", "I", "UP", "B"]

[tool.ruff.lint.per-file-ignores]
"api/main.py" = ["B008"]
"scripts/*" = ["E402"]  # standalone entry points bootstrap sys.path before imports
"evals_system/*" = ["E402"]  # same sys.path bootstrap as scripts/*

[tool.mypy]
python_version = "3.12"
plugins = ["pydantic.mypy"]
warn_unused_ignores = true
warn_redundant_casts = true
disallow_untyped_defs = true
exclude = ["tests/", "frontend/"]

# CI install is --group dev only; streamlit lives in eval-ui.
[[tool.mypy.overrides]]
module = "streamlit.*"
ignore_missing_imports = true
